--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -159,4 +159,7 @@
   <data name="UNKOWN_ERROR" xml:space="preserve">
     <value>Unknown error.</value>
   </data>
+  <data name="USER_NOT_FOUND" xml:space="preserve">
+    <value>User not found.</value>
+  </data>
 </root>
